<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>io.onemfive</groupId>
	<artifactId>radio</artifactId>
	<version>0.1.0-SNAPSHOT</version>

	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>1.8</java.version>
<!--		<skipTests>true</skipTests>-->
	</properties>

	<name>1m5-radio</name>
	<url>https://1m5.io</url>
	<description>Invisible Matrix Services - Radio Library</description>
	<inceptionYear>2019</inceptionYear>

	<developers>
		<developer>
			<name>objectorange</name>
			<email>objectorange@1m5.i2p</email>
		</developer>
	</developers>
	<scm>
		<connection>scm:git@github.com/1m5/1m5-radio</connection>
		<developerConnection>scm:git@github.com/1m5/1m5-radio</developerConnection>
		<url>git@github.com/1m5/1m5-radio</url>
	</scm>

	<profiles>
		<profile>
			<id>devnet</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				<io.onemfive.radio.Radio>io.onemfive.radio.vendor.gnuradio.GNURadio</io.onemfive.radio.Radio>
			</properties>
		</profile>
		<profile>
			<id>integrationnet</id>
			<properties>
				<io.onemfive.radio.Radio>io.onemfive.radio.vendor.gnuradio.GNURadio</io.onemfive.radio.Radio>
			</properties>
		</profile>
		<profile>
			<id>testnet</id>
			<properties>
				<io.onemfive.radio.Radio>io.onemfive.radio.vendor.gnuradio.GNURadio</io.onemfive.radio.Radio>
			</properties>
		</profile>
		<profile>
			<id>mainnet</id>
			<properties>
				<io.onemfive.radio.Radio>io.onemfive.radio.vendor.gnuradio.GNURadio</io.onemfive.radio.Radio>
			</properties>
		</profile>
	</profiles>

	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>io.onemfive</groupId>
			<artifactId>sensors</artifactId>
			<version>0.6.2-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>ru.r2cloud</groupId>
			<artifactId>jradio</artifactId>
			<version>1.16-SNAPSHOT</version>
		</dependency>
		<!-- Test -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<finalName>${project.name}-${project.version}</finalName>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
				<includes>
					<include>**/*.xml</include>
					<include>**/*.yml</include>
					<include>**/*.properties</include>
					<include>**/*.config</include>
					<include>**/*.txt</include>
					<include>**/*.crt</include>
				</includes>
			</resource>
		</resources>
		<pluginManagement>
			<plugins>
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
					<!--<version>2.8.1</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<groupId>org.apache.maven.plugins</groupId>-->
					<!--<artifactId>maven-assembly-plugin</artifactId>-->
					<!--<version>2.5.5</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-antrun-plugin</artifactId>-->
					<!--<version>1.8</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-dependency-plugin</artifactId>-->
					<!--<version>2.10</version>-->
				<!--</plugin>-->
				<!--<plugin>-->
					<!--<artifactId>maven-release-plugin</artifactId>-->
					<!--<version>2.5.2</version>-->
				<!--</plugin>-->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.3</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>com.github.maven-nar</groupId>
				<artifactId>nar-maven-plugin</artifactId>
				<version>3.6.0</version>
				<extensions>true</extensions>
				<configuration>
					<os>Linux</os>
					<skipTests>true</skipTests>
					<libraries>
						<library>
							<linkCPP>false</linkCPP>
							<type>executable</type>
							<run>true</run>
						</library>
					</libraries>
					<linker>
						<sysLibs>
							<sysLib>
								<name>dl</name>
							</sysLib>
							<sysLib>
								<name>pthread</name>
							</sysLib>
						</sysLibs>
					</linker>
					<cpp>
						<name>gcc</name>
						<multiThreaded>true</multiThreaded>
						<exceptions>false</exceptions>
						<debug>true</debug>
						<options>
							<option>-g</option>
							<option>-std=gnu99</option>
							<option>-Wall</option>
						</options>
						<clearDefaultOptions/>
					</cpp>
					<c>
						<name>gcc</name>
						<multiThreaded>true</multiThreaded>
						<exceptions>false</exceptions>
						<debug>true</debug>
						<options>
							<option>-g</option>
							<option>-std=gnu99</option>
							<option>-Wall</option>
						</options>
						<clearDefaultOptions/>
					</c>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
<!--					<compilerArgs>-->
<!--						<arg>-h</arg>-->
<!--						<arg>./target/classes</arg>-->
<!--					</compilerArgs>-->
				</configuration>
			</plugin>
			<!--<plugin>-->
				<!--<artifactId>maven-assembly-plugin</artifactId>-->
				<!--<executions>-->
					<!--<execution>-->
						<!--<phase>package</phase>-->
						<!--<goals>-->
							<!--<goal>single</goal>-->
						<!--</goals>-->
					<!--</execution>-->
				<!--</executions>-->
				<!--<configuration>-->
					<!--<archive>-->
						<!--<manifest>-->
							<!--<mainClass>io.onemfive.core.OneMFiveStandaloneLauncher</mainClass>-->
						<!--</manifest>-->
					<!--</archive>-->
					<!--<descriptorRefs>-->
						<!--<descriptorRef>jar-with-dependencies</descriptorRef>-->
					<!--</descriptorRefs>-->
				<!--</configuration>-->
			<!--</plugin>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
			<!--</plugin>-->
		</plugins>
	</build>

	<!--<reporting>-->
		<!--<plugins>-->
			<!--<plugin>-->
				<!--<groupId>org.apache.maven.plugins</groupId>-->
				<!--<artifactId>maven-project-info-reports-plugin</artifactId>-->
				<!--<version>2.8.1</version>-->
				<!--<reportSets>-->
					<!--<reportSet>-->
						<!--<reports>-->
							<!--<report>dependencies</report>-->
							<!--<report>project-team</report>-->
							<!--&lt;!&ndash;<report>mailing-list</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>cim</report> &ndash;&gt;-->
							<!--&lt;!&ndash;<report>issue-tracking</report> &ndash;&gt;-->
							<!--<report>license</report>-->
							<!--<report>scm</report>-->
						<!--</reports>-->
					<!--</reportSet>-->
				<!--</reportSets>-->
			<!--</plugin>-->
		<!--</plugins>-->
	<!--</reporting>-->

</project>